--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,45 @@ h6 {
 .cards_wrapper {
   @apply flex flex-col gap-4 w-full;
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-zinc-800;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-zinc-800;
+}
+
+::-webkit-scrollbar-thumb:active {
+  @apply bg-zinc-400;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-zinc-400;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track:hover {
+  @apply bg-zinc-400;
+}
+
+::-webkit-scrollbar-track:active {
+  @apply bg-zinc-400;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
